naeglelab/templates/proteome-scout-3-test-onprem/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: naeglelab-test-onprem-proteome-scout-3-service
  namespace: naeglelab
spec:
  selector:
    app: naeglelab-test-onprem-proteome-scout-3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
