naeglelab/templates/proteome-scout-3-test-onprem/tls-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer  
  name: naeglelab-test-2-proteome-scout-3-tls-nginx-ingress
  namespace: naeglelab
spec:
  rules:
    - host: naeglelab-test-2-proteome-scout-3.pods.uvarc.io
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: naeglelab-test-2-proteome-scout-3-service
              port: 
                number: 80
#     #This section is only required if TLS is to be enabled for the Ingress
  tls:
      - hosts:
          - naeglelab-test-2-proteome-scout-3.pods.uvarc.io
        secretName: naeglelab-test-2-proteome-scout-3-nginx-tls-ingress-secret
